[gd_scene load_steps=2 format=3 uid="uid://bvfase7g7yitn"]

[ext_resource type="Script" uid="uid://d1d7bqikjwtrm" path="res://UI/VarList/Vars/texture_variant_layer_var.gd" id="1_2lgvh"]

[node name="texture_variant_layer_var" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_2lgvh")

[node name="TexSelectorButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRectR" type="ColorPickerButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="ColorRectG" type="ColorPickerButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="ColorRectB" type="ColorPickerButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="UpButton" type="Button" parent="."]
layout_mode = 2
text = "^"

[node name="DownButton" type="Button" parent="."]
layout_mode = 2
text = "v"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
text = "x"

[connection signal="item_selected" from="TexSelectorButton" to="." method="_on_tex_selector_button_item_selected"]
[connection signal="color_changed" from="ColorRectR" to="." method="_on_color_rect_r_color_changed"]
[connection signal="color_changed" from="ColorRectG" to="." method="_on_color_rect_g_color_changed"]
[connection signal="color_changed" from="ColorRectB" to="." method="_on_color_rect_b_color_changed"]
[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
